src/test/resources/typeSystemTestModels/valid/interfaces/InterfaceNoDuplicateModifier.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.interfaces;

public interface InterfaceNoDuplicateModifier {

}
