src/test/resources/typeSystemTestModels/invalid/interfaces/InterfaceNoStaticMethod.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.interfaces;

public interface InterfaceNoStaticMethod {
  static String getString();
}
